--- a/assest/css/Partial-files/_mixins.scss
+++ b/assest/css/Partial-files/_mixins.scss
@@ -6,5 +6,5 @@
     display: $d-flex;
     justify-content: $space-between;
     align-items: $center;
-    flex-wrap: $wrap;
+    //flex-wrap: $wrap;
 }
