create header and responsive it

--- a/assest/css/Partial-files/_variables.scss
+++ b/assest/css/Partial-files/_variables.scss
@@ -6,6 +6,7 @@ $secondary-color :#888;
 $dark :#081828;
 $grid-colunm : 12;
 $w-100 : 100%;
+$text-hover-color : $dark;
 
 // display property
 $d-flex : flex;
@@ -23,3 +24,5 @@ $bg-colors : (primary : (background-color : $primary-color,
 
 // padding and margin points
 $points : (8, 16, 24, 32, 40);
+$regular : serif;
+$white : #fff;
