--- a/assest/css/Partial-files/_header.scss
+++ b/assest/css/Partial-files/_header.scss
@@ -1,9 +1,90 @@
 // Header Css Start
 
 .header {
+    overflow: hidden;
     .navbar {
+        .btn-toggle {
+            display: none;
+
+            @media screen and (max-width : 1160px) {
+                display: block;
+                width: 50px;
+                background: transparent;
+                height: 30px;
+                z-index: 1;
+                border: 1px solid white;
+                border-radius: 2px;
+                flex-direction: column;
+                padding: 5px;
+            }
+
+            .icon-bar {
+                display: block;
+                width: 100%;
+                margin-bottom: 3px !important;
+                background: #fffefe;
+                height: 4px;
+                margin: auto;
+            }
+
+        }
+
         .navbar-collapse {
-            width: calc(100% - 250px);
+
+            .nav-item {
+
+                position: relative;
+                overflow: hidden;
+                z-index: 0;
+
+                &:after {
+                    z-index: -1;
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    background: black;
+                    height: 0%;
+                    @include transition(all .3s ease-in-out)
+                }
+
+
+                &:hover:after {
+                    height: 100%;
+                    @include transition(all .3s ease-in-out)
+                }
+            }
+
+            .nav-links {
+                padding: 10px 25px;
+                margin-left: 10px;
+
+                &:hover {
+                    color: $white;
+                }
+            }
+
+            @media screen and (max-width : 1160px) {
+                position: absolute;
+                right: -100%;
+                top: 50px;
+                width: 250px;
+                z-index: 1;
+                padding: 20px 0;
+                background: #5830e0;
+                @include transition (all .5s ease-in-out);
+                border-top: 4px solid $dark;
+
+                .nav {
+                    display: block;
+
+                    .nav-item {
+                        line-height: 2;
+                        margin-bottom: 10px;
+                    }
+                }
+            }
         }
     }
 }
