--- a/assest/css/Partial-files/_mixins.scss
+++ b/assest/css/Partial-files/_mixins.scss
@@ -8,3 +8,8 @@
     align-items: $center;
     flex-wrap: $wrap;
 }
+
+// mixin for transitions
+@mixin transition($value) {
+    transition: $value;
+}
