--- a/assest/css/style-file/style.css
+++ b/assest/css/style-file/style.css
@@ -2,11 +2,13 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-  font-size: calc(15px + (24 - 15) * (100vw - 360px) / (1920 - 360));
+  color: #fff;
+  font-size: calc(16px + (24 - 16) * (100vw - 360px) / (1920 - 360));
+  font-family: serif;
 }
 
 .row {
@@ -16,13 +18,13 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .container-fluid {
@@ -48,27 +50,41 @@ body {
 
 .flex-wrap {
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .justify-content-between {
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .align-items-center {
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.d-block {
+  display: block !important;
+}
+
+.transition {
+  right: 0 !important;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 a {
   text-decoration: none;
+  color: white;
 }
 
 a:hover {
   text-decoration: none;
+  color: #081828;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 ul li {
@@ -459,8 +475,93 @@ ul li {
   margin-bottom: 40px;
 }
 
-.header .navbar .navbar-collapse {
-  width: calc(100% - 250px);
+.header {
+  overflow: hidden;
 }
 
+.header .navbar .btn-toggle {
+  display: none;
+}
+
+@media screen and (max-width: 1160px) {
+  .header .navbar .btn-toggle {
+    display: block;
+    width: 50px;
+    background: transparent;
+    height: 30px;
+    z-index: 1;
+    border: 1px solid white;
+    border-radius: 2px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 5px;
+  }
+}
+
+.header .navbar .btn-toggle .icon-bar {
+  display: block;
+  width: 100%;
+  margin-bottom: 3px !important;
+  background: #fffefe;
+  height: 4px;
+  margin: auto;
+}
+
+.header .navbar .navbar-collapse .nav-item {
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.header .navbar .navbar-collapse .nav-item:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: black;
+  height: 0%;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.header .navbar .navbar-collapse .nav-item:hover:after {
+  height: 100%;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.header .navbar .navbar-collapse .nav-links {
+  padding: 10px 25px;
+  margin-left: 10px;
+}
+
+.header .navbar .navbar-collapse .nav-links:hover {
+  color: #fff;
+}
+
+@media screen and (max-width: 1160px) {
+  .header .navbar .navbar-collapse {
+    position: absolute;
+    right: -100%;
+    top: 50px;
+    width: 250px;
+    z-index: 1;
+    padding: 20px 0;
+    background: #5830e0;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    border-top: 4px solid #081828;
+  }
+  .header .navbar .navbar-collapse .nav {
+    display: block;
+  }
+  .header .navbar .navbar-collapse .nav .nav-item {
+    line-height: 2;
+    margin-bottom: 10px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
